<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33AAFF"
    tools:context=".AddToDatabaseActivity">

    <TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10sp"
    android:paddingLeft="10sp"
    android:stretchColumns="0, 1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20sp">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_span="2"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp">
            <TextView
                android:id="@+id/stringProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etAddName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/enter_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp">
            <TextView
                android:id="@+id/stringKonzumPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/konzum"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etAddKonzumPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/enter_price_in_konzum" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp">
            <TextView
                android:id="@+id/stringSparPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spar"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etAddSparPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/enter_price_in_spar"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20sp">
            <TextView
                android:id="@+id/stringTisakPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tisak"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etAddTisakPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/enter_price_in_tisak"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnAddToDatabase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addToBase"
                android:background="@drawable/roundedbutton"
                android:textColor="#BBB"
                android:layout_span="2"/>
        </TableRow>
    </TableLayout>
</FrameLayout>