<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PricesActivity">

    <TextView
        android:id="@+id/tvProductBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:paddingLeft="10sp"
        android:background="#33AAFF"/>

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:background="#33AAFF"
        android:paddingLeft="10sp"/>

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:textColor="#BBB"
        android:text="@string/btnAddProduct"
        android:visibility="gone" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#33AAFF"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33AAFF">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0, 1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp">

                <TextView
                    android:id="@+id/tvTableHeaderStore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trHeaderStore"
                    android:textStyle="bold"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvTableHeaderPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trHeaderPrice"
                    android:textStyle="bold"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp">

                <TextView
                    android:id="@+id/tvKonzum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Konzum"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvPriceKonzum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp">

                <TextView
                    android:id="@+id/tvsSpar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Spar"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvPriceSpar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25sp">

                <TextView
                    android:id="@+id/tvTisak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tisak"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvPriceTisak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btnUpdateProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_product"
                    android:background="@drawable/roundedbutton"
                    android:layout_span="2"
                    android:textColor="#BBB"/>
            </TableRow>

        </TableLayout>
    </FrameLayout>



</LinearLayout>